<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>
    <string name="upcoming_elections">Upcoming Elections</string>
    <string name="find_my_representatives">Find my representatives</string>
    <string name="ballot_image">ballot_image</string>
    <string name="upcoming_elections_header">Upcoming Elections</string>
    <string name="item_description">Description</string>
    <string name="item_title">Title</string>
    <string name="election_information">Election Information</string>
    <string name="voting_location">Voting Location</string>
    <string name="ballot_information">Ballot Information</string>
    <string name="follow_election_text_button">Follow Election</string>
    <string name="unfollow_election_text_button">UnFollow Election</string>
    <string name="error_no_election">I\'m sorry! There is no information for this section.</string>
    <string name="saved_elections_header">Saved Elections</string>
    <string name="representative_search">Representative Search</string>
    <string name="my_representatives">My Representatives</string>
    <string name="use_my_location">Use My Location</string>
    <string name="zip">Zip</string>
    <string name="city">City</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="error_location_required">Please, enable the location!</string>
    <string name="error_invalid_address">Please, enter a valid address!</string>
    <string name="error_message">Something went wrong, please try again!</string>
    <string name="error_no_information">No information about this election</string>

</resources>
