<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.android.politicalpreparedness.election.VoterInfoViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.android.politicalpreparedness.MainActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/election_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:padding="@dimen/small_padding"
            android:singleLine="true"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@{viewModel.election.name}"
            app:titleTextColor="@color/white" />

        <TextView
            android:id="@+id/election_date"
            style="@style/VoterInfoDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{viewModel.election.electionDay.toString()}"
            app:layout_constraintTop_toBottomOf="@id/election_name"
            tools:text="12 November 2055" />

        <TextView
            android:id="@+id/state_header"
            style="@style/VoterInfoHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/election_information"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/election_date" />

        <!-- TODO: Add click binding to open web URL -->
        <TextView
            android:id="@+id/state_locations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/voting_location"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/state_header" />

        <!-- TODO: Add click binding to open web URL -->
        <TextView
            android:id="@+id/state_ballot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ballot_information"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/state_locations" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/address_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="state_correspondence_header,address" />

        <!-- TODO: Add visual styling and content -->
        <TextView
            android:id="@+id/state_correspondence_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/state_ballot" />

        <!-- TODO: Add data binding -->
        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/state_correspondence_header" />

        <!-- TODO: Add button to save election to Room -->

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>