<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:motion="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.android.politicalpreparedness.representative.RepresentativeViewModel" />
    </data>


    <!-- TODO: Add motion scene to hide form on vertical scroll. -->
    <androidx.constraintlayout.motion.widget.MotionLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:padding="@dimen/small_padding">

        <TextView
            android:id="@+id/search_title"
            style="@style/RepresentativeTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/representative_search"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- TODO: Add data binding value -->
        <!-- TODO: Add visual styling and content -->
        <EditText
            android:id="@+id/address_line_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Address Line 1"
            android:inputType="textPostalAddress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_title" />

        <!-- TODO: Add data binding value -->
        <!-- TODO: Add visual styling and content -->
        <EditText
            android:id="@+id/address_line_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Address Line 2"
            android:inputType="textPostalAddress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/address_line_1" />

        <!-- TODO: Add data binding value -->
        <!-- TODO: Add visual styling and content -->
        <EditText
            android:id="@+id/city"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="City"
            android:inputType="textPostalAddress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/state"
            app:layout_constraintTop_toBottomOf="@id/address_line_2" />

        <!-- TODO: Add default values from provided resources  -->
        <!-- TODO: Add data binding value -->
        <!-- TODO: Add visual styling and content -->
        <Spinner
            android:id="@+id/state"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:autofillHints=""
            android:inputType="textPostalAddress"
            app:layout_constraintStart_toEndOf="@id/city"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/city"
            app:layout_constraintBottom_toBottomOf="@id/city"/>

        <!-- TODO: Add data binding value -->
        <!-- TODO: Add visual styling and content -->
        <EditText
            android:id="@+id/zip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="Zip"
            android:inputType="number"
            android:maxLength="5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@id/city"
            app:layout_constraintTop_toBottomOf="@id/city" />

        <Button
            android:id="@+id/button_search"
            style="@style/RepresentativeButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/find_my_representatives"
            app:layout_constraintTop_toBottomOf="@id/zip" />

        <Button
            android:id="@+id/button_location"
            style="@style/RepresentativeButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/use_my_location"
            app:layout_constraintTop_toBottomOf="@id/button_search" />

        <TextView
            android:id="@+id/representative_title"
            style="@style/RepresentativeTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:text="@string/my_representatives"
            app:layout_constraintTop_toBottomOf="@id/button_location"
            motion:layout_editor_absoluteX="8dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/representativeRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_padding"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@+id/representative_title" />

        <TextView
            android:id="@+id/list_placeholder"
            style="@style/RepresentativePlaceholder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/representative_title"
            app:layout_constraintBottom_toBottomOf="parent"
            motion:visibilityMode="ignore" />

    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>
